hphp/hack/test/typecheck/coeffects/tyvars2.php.exp
File "tyvars2.php", line 11, characters 3-15:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "tyvars2.php", line 9, characters 18-19:
  From this declaration, the context of this function body provides the capability set {}
  File "tyvars2.php", line 5, characters 2-22:
  But the function being called requires the capability WriteProperty
